<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Example">

    <ImageButton
        android:id="@+id/btnBack3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#DFFFFFFF"
        android:contentDescription="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtTR3"
        app:srcCompat="@drawable/izquierdo_36"
        tools:ignore="SpeakableTextPresentCheck"
        tools:srcCompat="@drawable/izquierdo_36" />

    <ImageButton
        android:id="@+id/btnNext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#E2FFFFFF"
        android:contentDescription="Next"
        app:layout_constraintStart_toEndOf="@+id/btnHome3"
        app:layout_constraintTop_toBottomOf="@+id/editTxtTR3"
        app:srcCompat="@drawable/derecho_36"
        tools:ignore="SpeakableTextPresentCheck"
        tools:srcCompat="@drawable/derecho_36" />

    <ImageButton
        android:id="@+id/btnHome3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#DAFFFFFF"
        android:contentDescription="Home"
        app:layout_constraintStart_toEndOf="@+id/btnBack3"
        app:layout_constraintTop_toBottomOf="@+id/editTxtTR3"
        app:srcCompat="@drawable/hogar_36"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtTitle2a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/hagamos_un_ejemplo_practico"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTxtQ"
        android:layout_width="237dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/digite_el_cuantum"
        android:inputType="numberSigned"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle2a"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTxtTL1"
        android:layout_width="358dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/digite_el_tiempo_de_llegada_del_proceso_1"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtQ" />

    <EditText
        android:id="@+id/editTxtTL3"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/digite_el_tiempo_de_llegada_del_proceso_3"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtTR2" />

    <EditText
        android:id="@+id/editTxtTR3"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/digite_el_tiempo_de_rafaga_del_proceso_3"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtTL3" />

    <EditText
        android:id="@+id/editTxtTL2"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/digite_el_tiempo_de_llegada_del_proceso_2"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtTR" />

    <EditText
        android:id="@+id/editTxtTR2"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/digite_el_tiempo_de_rafaga_del_proceso_2"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtTL2" />

    <EditText
        android:id="@+id/editTxtTR"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/digite_el_tiempo_de_rafaga_del_proceso_1"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtTL1" />

    <EditText
        android:id="@+id/txtInstructions"
        android:layout_width="444dp"
        android:layout_height="83dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:clickable="false"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="Recuerde que el tiempo de llegada debe ser un número positivo, es la única regla,."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtTR3" />

</androidx.constraintlayout.widget.ConstraintLayout>